--- a/money-management-app/package.json
+++ b/money-management-app/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "validator": "^11.1.0"
   }
 }
